Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- #1160: Add support for TinyMCE, a Javascript HTML WYSIWYG editor
- #1943: robustness for Subobjects Field
- #1939: Dependent fields computation crash on Tramline files
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 