@@ -9,6 +9,8 @@ Bug fixes
 - #1160: Add support for TinyMCE, a Javascript HTML WYSIWYG editor
 - #1943: robustness for Subobjects Field
 - #1939: Dependent fields computation crash on Tramline files
+- #1974: Make vocabularies and vocabulary entries be sorted in the management
+  screen
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
